test_file/testw.java
public class test {
	public static void main(String[] ar) {
		int i=1;
		int[] j = {1,2,3,4};
		System.out.println("ilove"+"azure");
		System.out.println(j[0]+j[1]*j[2]);
	}
}

class happy{
    int emotion
    public happy(){
        this.emotion=1;
    }
    public sad(){  //error
        this.emotion=2;
    }
}